# hackerrank_c

./: .gitignore  CMakeLists.txt  debug_util.c  debug_util.h  input_util.c  input_util.h  main.c  output_util.c  output_util.h
ds_arrays_0_arrays_ds/: reverse_array.c  reverse_array.h
ds_arrays_1_2d_arrays_ds/: hourglass.c  hourglass.h
ds_arrays_2_dynamic_array/: dynamic_array.c  dynamic_array.h
ds_arrays_3_left_rotation/: rotate.c  rotate.h
ds_arrays_4_sparse_arrays/: matching_strings.c  matching_strings.h
ds_arrays_5_array_manipulation/: array_manipulation.c  array_manipulation.h
ds_linked_list/: linked_list.c  linked_list.h
ds_linked_list_0_insert_tail/: insert_head.c  insert_tail.h
ds_linked_list_1_insert_head/: insert_head.c  insert_head.h
ds_linked_list_2_insert_position/: insert_position.c  insert_position.h
